2007-08-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.scm: Fix a URL.

	* gnome/gobject/gsignal.c: 
	* gnome/gobject/gsignal.scm: 
	* gnome/gobject/gobject.c:
	* gnome/gobject/gobject.scm: Document.

	* gnome/gobject/gvalue.scm: 
	* gnome/gobject/gvalue.c: Document.

	* gnome/gobject/gclosure.scm: Document. Change gclosure-invoke to
	be a procedure rather than a method/generic.

	* gnome/gobject/gparameter.scm: 
	* gnome/gobject/gparameter.c: Document. Remove
	gparam-struct-arg-info from the exports list.

	* doc/guile-gnome-gobject.scm (*modules*): Reorder the modules so
	gvalue is before gparameter.

	* gnome/gobject/utils.scm (define-class-with-docs): New exported
	macro.

	* gnome/gobject/gtype.scm: Add a commentary, lots of doc fixups.

	* gnome/gobject/gtype.c: Lots of doc fixups.

	* doc/Makefile.am (doc): Define DOT_DOC_FILES so that we actually
	pick up the .doc files.

	* gnome/gobject/gtype.scm:
	* gnome/gobject/gtype.c (%function->method-public): Removed, this
	hack is no longer necessary (or used).

2007-08-25  Andy Wingo  <wingo@pobox.com>

	* doc/make-texinfo.scm (main): Don't search the load path for the
	file, we know where it is.

	* doc/docs.mk ($(doc).texi): Use the right environments.

	* doc/Makefile.am (nodist_info_TEXINFOS): Make automake happy.

	* doc/guile-gnome-gobject.texi: Remove, I found the trick to make
	automake happy.
	
	* gnome/gobject/Makefile.am: Add .doc files to the makefile, so
	they get built

	* TODO: Add something of a TODO

	* Makefile.am: Recurse into doc/.

	* doc/guile-gnome-gobject.texi: Add this file so that automake is
	happy.
	
	* doc/make-texinfo.scm: 
	* doc/guile-gnome-gobject.scm: 
	* doc/docs.mk:
	* doc/Makefile.am: Added doc infrastructure. make-texinfo.scm has
	been augmented with Ludovic's code to parse out docs snarfed from
	C files.

	* gnome/gw/support/modules.scm (export-all-lazy!): Export all
	non-lazy variables explicitly so that things like module frisking
	and tab completion work.
